--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pr-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meu portifólio</title>
 </head>
 <body>
-    
+
+    <img src="/img/luan-santana.webp" alt="avatar do luan santana" srcset=""> 
+  <p>sou o Luan Santana</p>  
+ <h1>eu sou um cantor</h1> 
+<p>Sou um cantor e compositor brasileiro, Canto sertanejo e começei minha carreira em 2009.</p>
+<p>Minhas habilidades</p>
+<div>
+    <p>Cantar</p>
+    <p>Tocar violão</p>
+    <p>compor músicas</p>
+  </div>
+
+
 </body>
 </html>
+ 
