--- a/index.html
+++ b/index.html
@@ -12,31 +12,43 @@
 
 <body>
 
-  <header class="container">
-  <img src="/img/luan-santana.webp" alt="avatar do luan santana" srcset="">
-  <p>sou o Luan Santana</p>
+  <header class="container text-center">
+  <img src="/img/luan-santana.webp" alt="avatar do luan santana"class="rounded-circle"width="250"
+  height="250" srcset="">
+  <p class="lead">sou o Luan Santana</p>
   <h1>eu sou o Luan Santana</h1>
   <p>Sou um cantor e compositor brasileiro, Canto sertanejo e começei minha carreira em 2009.</p>
   <p>Minhas habilidades</p>
   <div>
-    <p>Cantar</p>
-    <p>Tocar violão</p>
-    <p>compor musicas</p>
+    <p class="badge rounded-pill text-bg-dark">Cantar</p>
+    <p class="badge rounded-pill text-bg-dark">Tocar violão</p>
+    <p class="badge rounded-pill text-bg-dark">compor musicas</p>
   </div>
+  </header>
 
-  <div class="container text-center">
-    <div class="row align-items-start">
-      <div class="col">
-        One of three columns
+  <main class="container text-center">  
+    <div class="row align-items-center">
+      <div class="col-6 col-sm-3">
+      <h2>Meu shows</h2>
+        <img src="/img/luan-santana-696x464-1.webp" class="card-img-top" alt="Biblioteca Personalizada do Luan Santana- avatar do Luan Santana">
+        <h5>Como são meus shows.</h5>
+        <p>Meus shows são conhecidos pela energia contagiante,em média realizo de 10 a 15 shows por mês, dependendo da época do ano. Tem luzes e efeitos visuais que fazem o show ficar mais mágico. Me destaco com a minha capacidade vocal, fazendo performaces poderosas e emotivas, além de tocar violão e outros instrumentos, o que da um toque especial em minhas apreentações. </p>
+        <button type= "button" class="btn btn-link">LINK</button>
       </div>
-      <div class="col">
-        One of three columns
+      <div class="col-6 col-sm-3">
+        <img src="/img/images.jpeg" class="card-img-top" alt="Biblioteca Personalizada do Luan Santana- avatar do Luan Santana">
+        <h5>Estilos de música</h5>
+        <p> Em meus shows o público pode esperar uma mitura de múica sertaneja, música rômanticas e até uns toques de pop. sucessos como "Meteoro da paixão" ," te esperando" e outros e são tocadas em todos os shows, mas sempre trago novidades.</p>
+        <button type= "button" class="btn btn-link">LINK</button>
       </div>
-      <div class="col">
-        One of three columns
+      <div class="col-6 col-sm-3">
+        <img src="/img/Biografia-de-Luan-Santana-a-transformacao-do-‘gurizinho-em-um.webp.webp" class="card-img-top"  alt="Biblioteca Personalizada do Luan Santana- avatar do Luan Santana">
+        <h5>Minha interação com o público</h5>
+        <p> Sou famoso pelo meu carisma e proximidade com meus fãns durante o shows, cotumo conversar com o público, pedir para que cantem comigoe até fazer brincadeiras, criand o ambiente mais agradável, tentando sempre me conectar com o público.</p>
+        <button type= "button" class="btn btn-link">LINK</button>
       </div>
     </div>
-  </div>
+
 </header>
 
 
