--- a/index.html
+++ b/index.html
@@ -26,30 +26,87 @@
   </div>
   </header>
 
-  <main class="container text-center">  
+  <main class="container text-center mt-5;">  
     <div class="row align-items-center">
       <div class="col-6 col-sm-3">
       <h2>Meu shows</h2>
         <img src="/img/luan-santana-696x464-1.webp" class="card-img-top" alt="Biblioteca Personalizada do Luan Santana- avatar do Luan Santana">
         <h5>Como são meus shows.</h5>
         <p>Meus shows são conhecidos pela energia contagiante,em média realizo de 10 a 15 shows por mês, dependendo da época do ano. Tem luzes e efeitos visuais que fazem o show ficar mais mágico. Me destaco com a minha capacidade vocal, fazendo performaces poderosas e emotivas, além de tocar violão e outros instrumentos, o que da um toque especial em minhas apreentações. </p>
-        <button type= "button" class="btn btn-link">LINK</button>
+        <button type= "button" class="btn btn-link"data-bs-toggle="modal" data-bs-target="#modal1">LINK</button>
       </div>
       <div class="col-6 col-sm-3">
         <img src="/img/images.jpeg" class="card-img-top" alt="Biblioteca Personalizada do Luan Santana- avatar do Luan Santana">
         <h5>Estilos de música</h5>
         <p> Em meus shows o público pode esperar uma mitura de múica sertaneja, música rômanticas e até uns toques de pop. sucessos como "Meteoro da paixão" ," te esperando" e outros e são tocadas em todos os shows, mas sempre trago novidades.</p>
-        <button type= "button" class="btn btn-link">LINK</button>
+        <button type= "button" class="btn btn-link"data-bs-toggle="modal" data-bs-target="#modal2">LINK</button>
       </div>
       <div class="col-6 col-sm-3">
         <img src="/img/Biografia-de-Luan-Santana-a-transformacao-do-‘gurizinho-em-um.webp.webp" class="card-img-top"  alt="Biblioteca Personalizada do Luan Santana- avatar do Luan Santana">
         <h5>Minha interação com o público</h5>
         <p> Sou famoso pelo meu carisma e proximidade com meus fãns durante o shows, cotumo conversar com o público, pedir para que cantem comigoe até fazer brincadeiras, criand o ambiente mais agradável, tentando sempre me conectar com o público.</p>
-        <button type= "button" class="btn btn-link">LINK</button>
+        <button type= "button" class="btn btn-link"data-bs-toggle="modal" data-bs-target="#modal3" >LINK</button>
       </div>
     </div>
 
-</header>
+  </main>
+  <!--modal 1-->
+  <div class="modal"id="modal1" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">minha carreira</h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <p>Desde pequeno, a música sempre foi meu sonho. Cresci ouvindo sertanejo e, em 2009, comecei a despontar no cenário nacional com o meu primeiro álbum. Com hits como "Meteoro" e "Tô de Cara", a minha carreira decolou rapidamente, e os shows foram se tornando cada vez maiores e mais cheios de energia.
+
+            Nos palcos, sempre tento me conectar de verdade com o público. Cada apresentação é única e emocionante. O público me surpreende a cada show, seja com pedidos de músicas antigas ou com sua energia. O mais legal é ver como a minha música conquistou pessoas de todas as idades e estilos.
+            
+            Ao longo dos anos, hits como "Te Esperando" e "Sogrão Caprichou" me levaram a lugares incríveis, mas o mais importante é saber que minha paixão pela música continua forte. Sou muito grato aos meus fãs por estarem sempre ao meu lado. Cada show é uma oportunidade de entregar o melhor de mim e continuar compartilhando minha música com o mundo.</p>
+            <img
+    src="img/channels4_profile.jpg"
+    alt="Imagem representativa do projeto de uma biblioteca online"
+  />
+        </div>
+        <div class="modal-footer"> 
+          <a href="">Ver projeto ao vivo</a>
+          <a href="">Ver código do projeto</a>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Close
+          </button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class="container py-5">
+    <h2>entre em contato</h2>
+    <div><a href="https://github.com/laurasw14/projeto-Laura.">GitHub</a>
+    </div>
+    <p  class="my-5 text-center">© Copyright 2025. Produzido por Laura Swaricz</p>
+
+    <input type="radio" name="bg" id="cor1">
+<label for="cor1" class="botao">Azul</label>
+
+<input type="radio" name="bg" id="cor2">
+<label for="cor2" class="botao">Rosa</label>
+
+<input type="radio" name="bg" id="cor3">
+<label for="cor3" class="botao">Verde</label>
+
+<h1>Bem vindo ao meu portifólio!</h1>
+
+
+
+
+  </footer>
 
 
 
@@ -59,5 +116,4 @@
 
 
 </body>
-
 </html>
